--- a/gamecomposer/pom.xml
+++ b/gamecomposer/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>de.mirkosertic</groupId>
         <artifactId>gamecreator</artifactId>
-        <version>0.4-SNAPSHOT</version>
+        <version>0.4</version>
     </parent>
     <artifactId>gamecomposer</artifactId>
     <name>GameComposer Game IDE</name>
