--- a/gameengine-teavmrenderer/pom.xml
+++ b/gameengine-teavmrenderer/pom.xml
@@ -16,7 +16,7 @@
     </scm>
 
     <properties>
-        <teavm.version>0.3.2</teavm.version>
+        <teavm.version>0.4.1</teavm.version>
     </properties>
 
     <dependencies>
@@ -50,12 +50,10 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- Different browser APIs for TeaVM in terms of JSO -->
         <dependency>
             <groupId>org.teavm</groupId>
-            <artifactId>teavm-dom</artifactId>
+            <artifactId>teavm-jso-apis</artifactId>
             <version>${teavm.version}</version>
-            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -105,7 +103,7 @@
                         <id>web-client</id>
                         <phase>prepare-package</phase>
                         <goals>
-                            <goal>build-javascript</goal>
+                            <goal>compile</goal>
                         </goals>
                         <configuration>
                             <targetDirectory>${project.build.directory}/generated/js/teavm</targetDirectory>
