--- a/gameengine-androidrenderer/AndroidManifest.xml
+++ b/gameengine-androidrenderer/AndroidManifest.xml
@@ -5,8 +5,8 @@
     android:versionName="1.0-SNAPSHOT" >
 
     <uses-sdk
-        android:minSdkVersion="10"
-        android:targetSdkVersion="16" />
+        android:minSdkVersion="14"
+        android:targetSdkVersion="14" />
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -14,6 +14,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:hardwareAccelerated="true"
         android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
         <activity android:name="de.mirkosertic.gameengine.android.GameEngineActivity" >
             <intent-filter>
