--- a/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/GameComposer.properties
+++ b/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/GameComposer.properties
@@ -5,6 +5,7 @@ menu.new=New Game
 menu.open=Open Game
 menu.export=Export
 menu.exportashtmlgwt=Save and Export as HTML5(GWT)
+menu.exportashtmldragome=Save and Export as HTML5(Dragome)
 menu.exportashtmlteavm=Save and Export as HTML5(TeaVM)
 menu.exportasandroid=Save and Export as Android App
 objectinspector.title=Object inspector
