--- a/gameengine-gwtrenderer/pom.xml
+++ b/gameengine-gwtrenderer/pom.xml
@@ -18,7 +18,7 @@
     </scm>
 
     <properties>
-        <gwt.version>2.8.0-SNAPSHOT</gwt.version>
+        <gwt.version>2.7.0</gwt.version>
     </properties>
 
     <repositories>
